--- a/firstTryMecaniques1.html
+++ b/firstTryMecaniques1.html
@@ -24,22 +24,22 @@
                 <p>De ce fait j'ai imaginé des mecaniques assez "classiques" que j'ai recréé, comme un Dash, un double saut, une charge au sol, etc. </p>
                 <p>Vous pouvez voir ici, des vidéos présentant les différentes mécaniques.</p>
                 <ul>
-                    <li>Mecanique de grab et ouverture de porte avec le bon cube : </li>
-                    <video controls src="videos/firstTryGrab.mp4" type="video/mp4"></video>
-                    <li>Mecanique de double saut : </li>
-                    <video controls src="videos/firstTryDoubleJump.mp4" type="video/mp4"></video>
-                    <li>Mecanique d'ouverture d'autre portes : </li>
-                    <video controls src="videos/firstTryOtherDoorsOpen.mp4" type="video/mp4"></video>
-                    <li>Mecanique de récupération de trophées (un objectif secondaire) : </li>
-                    <video controls src="videos/firstTryTrophies.mp4" type="video/mp4"></video>
-                    <li>Mecanique de charge au sol : </li>
-                    <video controls src="videos/firstTryGroundCharge.mp4" type="video/mp4"></video>
-                    <li>Mecanique de bond en avant (dash) : </li>
-                    <video controls src="videos/firstTryDash.mp4" type="video/mp4"></video>
-                    <li>Mecanique de changement de gravité : </li>
-                    <video controls src="videos/firstTryGravityChange.mp4" type="video/mp4"></video>
-                    <li>Mécanique du grappin : </li>
-                    <video controls src="videos/firstTryGrapplingHook.mp4" type="video/mp4"></video>
+                    <li>Grab et ouverture de porte : </li>
+                    <img class="gif" src="gif/firstTryGrab.gif" alt="grab">
+                    <li>Double saut : </li>
+                    <img class="gif" src="gif/firstTryDoubleJump.gif" alt="double saut">
+                    <li>Ouverture d'autre portes : </li>
+                    <img class="gif" src="gif/firstTryOtherDoorsOpen.gif" alt="Ouverture d'autre portes">
+                    <li>Récupération de trophées : </li>
+                    <img class="gif" src="gif/firstTryTrophies.gif" alt="récupération de trophées">
+                    <li>Charge au sol : </li>
+                    <img class="gif" src="gif/firstTryGroundCharge.gif" alt="charge au sol">
+                    <li>Bond en avant (dash) : </li>
+                    <img class="gif" src="gif/firstTryDash.gif" alt="bond en avant (dash)">
+                    <li>Changement de gravité : </li>
+                    <img class="gif" src="gif/firstTryGravityChange.gif" alt="changement de gravité">
+                    <li>Grappin : </li>
+                    <img class="gif" src="gif/firstTryGrapplingHook.gif" alt="grappin">
                 </ul>
             </div>
         </div>
