--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <canvas id="particleCanvas"></canvas>
     <header class="seul">
         <h1><a href="index.html"><img src="img/logo_blog.png" alt="logo du blog"></a></h1>
     </header>
