--- a/equilibrium.html
+++ b/equilibrium.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <canvas id="particleCanvas"></canvas>
     <header class="seul">
         <h1><a href="index.html"><img src="img/equilibrium.png" alt="logo du jeu"></a></h1>
     </header>
