--- a/firstTry.html
+++ b/firstTry.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <canvas id="particleCanvas"></canvas>
     <header class="seul">
         <h1><a href="index.html"><h2>FIRST TRY</h2></a></h1>
     </header>
