--- a/mangalibrary.html
+++ b/mangalibrary.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <canvas id="particleCanvas"></canvas>
     <header class="seul">
         <h1><a href="index.html"><img class="mangalibrary" src="img/MangaLibrary_logo2.png" alt="logo du site"></a></h1>
     </header>
