--- a/phasmohelp.html
+++ b/phasmohelp.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <canvas id="particleCanvas"></canvas>
     <header class="seul">
         <h1><a href="index.html"><img class="phasmohelpLogo" src="img/Phasmohelp_logo2.png" alt="logo"></a></h1>
     </header>
