--- a/conclusion1.html
+++ b/conclusion1.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <canvas id="particleCanvas"></canvas>
     <header class="seul">
         <h1><a href="blogStage.html"><h2>PAGE PRÉCÉDENTE</h2></a></h1>
     </header>
