--- a/fakegpt.html
+++ b/fakegpt.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <canvas id="particleCanvas"></canvas>
     <header class="seul">
         <h1><a href="index.html"><img src="img/FakeGPT.png" alt="logo du site"></a></h1>
     </header>
