--- a/firstTryMecaniques1.html
+++ b/firstTryMecaniques1.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <canvas id="particleCanvas"></canvas>
     <header class="seul">
         <h3><a href="firstTry.html"><h4>Page précédente</h4></a></h3>
     </header>
