--- a/twitch.html
+++ b/twitch.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <canvas id="particleCanvas"></canvas>
     <header class="seul">
         <h1><a href="index.html"><img src="img/logo_YK.png" alt="logo de ma chaine twitch"></a></h1>
     </header>
