Modification page firstTry

--- a/firstTry.html
+++ b/firstTry.html
@@ -23,19 +23,42 @@
             <h1>Qu'est-ce que ce projet ?</h1>
             <div class="description">
                 <p> Ce projet est mon premier jeu développé en utilisant l'Unreal Engine 5.</p>
-                <p> Ce jeu est entièrement fait par moi-même, seul. (Projet débuté le 22 novembre 2024)</p>
-                <p> Le jeu se voudrait être un jeu de plateformes 3D en vue à la troisième personne dans des univers coloré. </p>
-                <p> Le but du jeu n'est pas encore clairement défini.</p>
+                <p> Ce jeu est entièrement fait par moi-même, seul.</p>
+                <p> Le jeu est un jeu de plateformes 3D en vue à la troisième personne dans des univers coloré. </p>
                 <p> Ma principale inspiration est un jeu que j'ai beaucoup aimé faire et qui se nomme Supraland.</p>
             </div>
         </div>
         <div class="projects" id="projects">
-            <h1>Quelques articles concernant ce projet :</h1>
-            <p class="centered">(vous pouvez cliquer sur les titres pour plus de détails concernant l'article)</p>
-            <ul>
-                <li aria-label="firstTryMecaniques1.html" class="addMargin"><a href="firstTryMecaniques1.html">Création de mécaniques (partie 1).</a></li>
-                <li aria-label="firstTryNiveau1.html" class="addMargin"><a href="firstTryNiveau1.html">Le premier niveau.</a></li>
-            </ul>
+            <div class="firstTryMeca">
+                <h1>Mécaniques :</h1>
+                <ul>
+                    <li>Grab et ouverture de porte : </li>
+                    <img class="gif" src="gif/firstTryGrab.gif" alt="grab">
+                    <li>Double saut : </li>
+                    <img class="gif" src="gif/firstTryDoubleJump.gif" alt="double saut">
+                    <li>Ouverture d'autre portes : </li>
+                    <img class="gif" src="gif/firstTryOtherDoorsOpen.gif" alt="Ouverture d'autre portes">
+                    <li>Récupération de trophées : </li>
+                    <img class="gif" src="gif/firstTryTrophies.gif" alt="récupération de trophées">
+                    <li>Charge au sol : </li>
+                    <img class="gif" src="gif/firstTryGroundCharge.gif" alt="charge au sol">
+                    <li>Bond en avant (dash) : </li>
+                    <img class="gif" src="gif/firstTryDash.gif" alt="bond en avant (dash)">
+                    <li>Changement de gravité : </li>
+                    <img class="gif" src="gif/firstTryGravityChange.gif" alt="changement de gravité">
+                    <li>Grappin : </li>
+                    <img class="gif" src="gif/firstTryGrapplingHook.gif" alt="grappin">
+                </ul>
+            </div>
+            <div class="firstTryLevel1">
+                <h1>Premier niveau :</h1>
+                <p>Avant de montrer le premier niveau, je tenais à préciser que les visuels ne sont pas définitifs.</p>
+                <p>Je voulais aussi dire que ce niveau 1 est volontairement très court et ce veux être comme une sorte de tutoriel pour le jeu.</p>
+                <p>Vous pouvez voir une vidéo de présentation juste ici :</p>
+                <video controls class="big">
+                    <source src="videos/firstTryLevelOne.mp4" type="video/mp4">
+                </video>
+            </div>
         </div>
     </main>
     <footer>
