Modif page hachinosu et fakegpt

--- a/hachinosu.html
+++ b/hachinosu.html
@@ -9,29 +9,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>myconfig</title>
+    <title>Hachinosu</title>
 </head>
 
 <body>
     <canvas id="particleCanvas"></canvas>
     <header class="seul">
-        <h1><a href="index.html"><img src="img/FakeGPT.png" alt="logo du site"></a></h1>
+        <h1><a href="index.html"><img src="img/Hachinosu.png" alt="logo du jeu"></a></h1>
     </header>
     <main>
         <div class="about">
             <h1>Qu'est-ce que ce projet ?</h1>
             <div class="description">
-                <p>Ce jeu consistait est un petit jeu de puzzle 2D créé dans le but</p>
-                <p>L'application est codée en Python et utilise TKinter.</p>
-                <p>Sur l'application, nous avons un champs de texte pour y écrire notre prompt avec un bouton en dessous
-                    pour l'envoyer a l'API.</p>
-                <p>Un historique des prompts est disponible sur la droite.</p>
+                <p>Ce jeu consistait est un petit jeu de puzzle 2D.</p>
+                <p>Pour ajouter un du contexte, ce jeu à été créé lors de la première "game jam" que j'ai faite</p>
+                <p>Cette "game jam" à été organisée par l'école et nous avions 48h pour faire un jeu avec le thème suivant : 'Le chiffre 1'</p>
             </div>
         </div>
         <div class="projects" id="projects">
             <h1> Le jeu :</h1>
-            <div class="resolution">
-                <a href="./HachinosuWebGL/hachinosuPlay.html">Cliquez pour accéder au jeu</a>
+            <div class="hachinosuPlay">
+                <a href="./HachinosuWebGL/" class="centered">Cliquez ici pour accéder au jeu</a>
             </div>
         </div>
         </div>
