Modif page hachinosu et index

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="projet web"><img class="main" id="phasmohelp" src="img/Phasmohelp_logo.png"
                             alt="phasmohelp">
                 </div>
-                <div class="projet game"><img class="main" id="hachinosu" src="img/hachinosu.png" alt="logo hachinosu">
+                <div class="projet game"><img class="main" id="hachinosu" src="gif/hachinosu.gif" alt="logo hachinosu">
                 </div>
                 <div class="projet game"><img class="main" id="vortex" src="img/logo_vortex_png.png" alt="logo vortex">
                 </div>
