--- a/hachinosu.html
+++ b/hachinosu.html
@@ -15,7 +15,7 @@
 <body>
     <canvas id="particleCanvas"></canvas>
     <header class="seul">
-        <h1><a href="index.html"><img src="img/Hachinosu.png" alt="logo du jeu"></a></h1>
+        <h1><a href="index.html"><img src="img/hachinosu.png" alt="logo du jeu"></a></h1>
     </header>
     <main>
         <div class="about">
@@ -23,7 +23,7 @@
             <div class="description">
                 <p>Ce jeu consistait est un petit jeu de puzzle 2D.</p>
                 <p>Pour ajouter un du contexte, ce jeu à été créé lors de la première "game jam" que j'ai faite</p>
-                <p>Cette "game jam" à été organisée par l'école et nous avions 48h pour faire un jeu avec le thème suivant : 'Le chiffre 1'</p>
+                <p>Cette game jam à été organisée dans mon école et nous avions 48h pour faire un jeu avec le thème suivant : 'Le chiffre 1'</p>
             </div>
         </div>
         <div class="projects" id="projects">
