ajout images page Timestreak

--- a/timestreak.html
+++ b/timestreak.html
@@ -28,9 +28,18 @@
             </div>
         </div>
         <div class="projects" id="projects">
+            <h1>Quelques images du projet :</h1>
+            <div class="liste_img_projets">
+                <div class="img_projet"><img id="cible" src="img/timestreakCible.png" alt="cible"></div>
+                <div class="img_projet"><img id="grappins" src="img/timestreakGrappins.png" alt="un petit parcours de grappins"></div>
+                <div class="img_projet"><img id="jump1" src="img/timeStreakJump1.png" alt="un jump"></div>
+                <div class="img_projet"><img id="zone1" src="img/timeStreakZone1.png" alt="une zone de jeu">
+                <div class="img_projet"><img id="jump2" src="gif/timeStreakJump2.gif" alt="un gif d'un jump">
+                </div>
+            </div>
             <h1> Le jeu :</h1>
             <div class="timestreakDL">
-                <a href="./timestreakDL/Timestreak-Windows.zip" class="centered">Cliquez ici pour pouvoir télécharger un build du jeu (ZIP - WINDOWS)</a>
+                <a href="https://yankeezfr.itch.io/timestreak" class="centered">Cliquez ici pour pouvoir télécharger un build du jeu (ZIP - WINDOWS)</a>
             </div>
         </div>
         </div>
