fin page Timestreak

--- a/timestreak.html
+++ b/timestreak.html
@@ -15,16 +15,17 @@
 <body>
     <canvas id="particleCanvas"></canvas>
     <header class="seul">
-        <h1><a href="index.html"><img src="img/timestreak.png" alt="logo du jeu"></a></h1>
+        <h1><a href="index.html"><img src="img/timestreakLogo.png" alt="logo du jeu"></a></h1>
     </header>
     <main>
         <div class="about">
             <h1>Qu'est-ce que ce projet ?</h1>
             <div class="description">
-                <p>Le jeu est un jeu de parcours 3D rapide et dynamique.</p>
+                <p>Le jeu est un jeu de parcours 3D rapide et dynamique développé sous unreal Engine 5.4.4.</p>
                 <p>Dans ce jeu vous incarnerez un personnage quelconque muni d'un sabre.</p>
                 <p>Votre but est de détruire un certain nombre de cibles qui apparaitront à différents points possibles de manière aléatoire et ce dans un temps limité.</p>
                 <p>Chaque cible détruite vous laissera du temps supplémentaire pour éviter la défaite !</p>
+                <p>Le jeu est un projet solo, j'ai travaillé dessus sur tout les aspects</p>
             </div>
         </div>
         <div class="projects" id="projects">
@@ -33,14 +34,13 @@
                 <div class="img_projet"><img id="cible" src="img/timestreakCible.png" alt="cible"></div>
                 <div class="img_projet"><img id="grappins" src="img/timestreakGrappins.png" alt="un petit parcours de grappins"></div>
                 <div class="img_projet"><img id="jump1" src="img/timeStreakJump1.png" alt="un jump"></div>
-                <div class="img_projet"><img id="zone1" src="img/timeStreakZone1.png" alt="une zone de jeu">
-                <div class="img_projet"><img id="jump2" src="gif/timeStreakJump2.gif" alt="un gif d'un jump">
-                </div>
+                <div class="img_projet"><img id="zone1" src="img/timeStreakZone1.png" alt="une zone de jeu"></div>
+                <div class="img_projet"><img id="jump2" src="gif/timeStreakJump2.gif" alt="un gif d'un jump"></div>
             </div>
-            <h1> Le jeu :</h1>
-            <div class="timestreakDL">
-                <a href="https://yankeezfr.itch.io/timestreak" class="centered">Cliquez ici pour pouvoir télécharger un build du jeu (ZIP - WINDOWS)</a>
-            </div>
+        </div>
+        <h1> Le jeu :</h1>
+        <div class="timestreakDL">
+            <a href="https://yankeezfr.itch.io/timestreak" class="centered">Cliquez ici pour pouvoir télécharger un build du jeu (ZIP - WINDOWS)</a>
         </div>
         </div>
     </main>
