--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                 <div class="projet game"><img class="main" id="firstTry" src="img/firstTry.png"
                         alt="image 1er jeu sous Unreal Engine 5">
                 </div>
+                <div class="projet game"><img class="main" id="Timestreak" src="img/timeStreakLogo.png"
+                        alt="image 2nd jeu sous Unreal Engine 5">
+                </div>
                 <div class="projet web"><img class="main" id="phasmohelp" src="img/Phasmohelp_logo.png"
                             alt="phasmohelp">
                 </div>
