ajout lien vers page Timestreak + logo

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="projet game"><img class="main" id="firstTry" src="img/firstTry.png"
                         alt="image 1er jeu sous Unreal Engine 5">
                 </div>
-                <div class="projet game"><img class="main" id="Timestreak" src="img/timeStreakLogo.png"
+                <div class="projet game"><img class="main" id="timestreak" src="img/timeStreakLogo.png"
                         alt="image 2nd jeu sous Unreal Engine 5">
                 </div>
                 <div class="projet web"><img class="main" id="phasmohelp" src="img/Phasmohelp_logo.png"
