--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
         <div class="actus" id="actus">
             <h1>Quelques actualités :</h1>
             <div class="liste_actus">
-                <p class="actus"> Je suis à la recherche urgente d'un stage de 12 semaines dans le milieu du jeu vidéo
-                    pour Juin 2025</p>
-                <p class="actus"> Je recherche également une alternance dans le même milieu pour les années 2025-2026 et 2026-2027</p>
+                <p class="actus"> Je suis actuellement en reconversion</p>
             </div>
         </div>
         <div class="projects" id="projects">
