--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
             <div class="description">
                 <p>Bonjour ! Je m'appelle Maxime, j'ai 23 ans, je suis en troisième année de Bachelor informatique au campus Ynov
                     de Lille.</p>
-                <p>Je me suis spécialisé dans la programmation de jeux vidéo cette année.</p>
+                <p>Je me suis spécialisé dans la programmation de jeux vidéo cette année 2024-2025.</p>
                 <p>J'ai, avant ça, fait un DUT Réseaux et Télécommunication pendant 2 ans.</p>
                 <p>Pour parler plus personnellement :</p>
-                <p>Je suis passionné de jeux vidéo depuis tout petit et j'aimerai en faire mon métier.</p>
+                <p>J'aime le jeu vidéo depuis tout petit.</p>
                 <p>Je suis également passionné par le Japon, que ce soit les traditions ou les mythes et légendes en
                     passant par l'animation japonaise et les mangas.</p>
                 <p>J'ai une collection de minéraux car je voulais devenir géologue lorsque j'était plus jeune.</p>
-                <p>Je fais du théâtre en amateur depuis 2020</p>
+                <p>Je fais du théâtre en amateur depuis fin 2019 et j'en suis devenu passioné au point de vouloir tenter une reconversion en tant que comédien.</p>
             </div>
         </div>
     </main>
