correction redirection timestreak + modification descriptio globale

--- a/index.html
+++ b/index.html
@@ -118,9 +118,8 @@
         <div class="about" id="about">
             <h1>À propos de moi :</h1>
             <div class="description">
-                <p>Bonjour ! Je m'appelle Maxime, j'ai 23 ans, je suis en troisième année de Bachelor informatique au campus Ynov
+                <p>Bonjour ! Je m'appelle Maxime, j'ai 24 ans, j'ai terminé ma troisième année de Bachelor informatique au campus Ynov
                     de Lille.</p>
-                <p>Je me suis spécialisé dans la programmation de jeux vidéo cette année 2024-2025.</p>
                 <p>J'ai, avant ça, fait un DUT Réseaux et Télécommunication pendant 2 ans.</p>
                 <p>Pour parler plus personnellement :</p>
                 <p>Je fais du théâtre en amateur depuis fin 2019 et j'en suis devenu passioné au point de vouloir tenter une reconversion en tant que comédien.</p>
