--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="actus" id="actus">
             <h1>Quelques actualités :</h1>
             <div class="liste_actus">
-                <p class="actus"> Je suis actuellement en reconversion</p>
+                <p class="actus"> Je suis actuellement en recherche d'emploi</p>
             </div>
         </div>
         <div class="projects" id="projects">
